--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
+  <depend>std_msgs</depend>
   <depend>avr_2023_common_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
